Add HTML Summaries part3

--- a/index.html
+++ b/index.html
@@ -255,9 +255,41 @@
         - the footer of website
         <footer></footer>
 
+        inside the section you want to put image and paragraph you use as per below:
+        <figure>//you can put inside it the image and its caption
+            <img src="">
+            <figcaption> </figcaption>   // photo caption
+        </figure>    
     -->
 
     <!--
+        AUDIO TAG:
+
+        <audio src="">  </audio>            // you can use src="" attribute of you can use instead source tag as per below
+
+        <audio controls autoplay loop muted>  
+            <source src="asdfasdfdfs.mp3" type="audio/mpeg"> // inside the type you gonna write the MIME type for the src audio mp3..wav.ogg
+            <source src="agfgagfafg.ogg" type="audio/ogg">
+            <source src="agfgagfafg.wav" type="audio/wav">
+            Your Brower does not support audio tag
+        </audio>
+    -->
+
+    <!--
+        VIDEO TAG:
+        <video src=""> </video>
+        <video controls width="600" height="600" autoplay loop muted poster="img.png"> poster is image will siplay till the video loaded on page
+            <source src="afgafdafg.mp4" type="video/mp4">
+            <source src="afgafdafg.ogg" type="video/ogg">
+            Your Browser Does not support Video Tag
+            <track src="agffd.vtt" kind="subtitles" srclang="en" label="English"> Important tag for translation or description for whose blind or cannot hear
+            <track src="agffd.vtt" kind="subtitles" srclang="de" label="German">
+        </video>
+    -->
+
+    <!--
+        Form:
+        
     -->
 </body>
 
