--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <small> </small> =>smaller text-words if you want to make some words inside paragraph a littel bit small than other wirds inside text
 
         <del> </del> => to delete some words or parts of my paragraph it will make a line on this text to show to user that it is deleted
-
+        <s>   </s>  => it means that the text between is no longer accurate or no longer relevant and it works same <del> </del> 
         <ins> </ins> => Inserted text it will put underline to show that this text or words inside the paragraph was added new to it
 
         <sub> </sub> => H<sub>2</sub>O      // H2O  but the 2 go small and down
